kubernetes/apps/cabling/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cabling-ingress
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`cabling.kalexlab.xyz`)
      services:
        - name: eccm-server
          port: http
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    secretName: cabling-ingress-certificate-secret
